# Multi-Agents-Coordination

./: .env.example  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  render.yaml  test.py
api/: __init__.py  endpoints.py  utils.py
docs/api/: endpoints.md
src/agents/: __init__.py  classifier.py  consultant.py  contractor.py  models.py  utils.py
src/config/args/: __init__.py  foundation_model.json  utils.py
src/config/prompts/: __init__.py  classifier.md  consultant.md  contractor.md
src/tools/: __init__.py  consultant.py
